--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,8 @@ pgvector = "^0.1.7"
 psycopg2cffi = {version = "^2.9.0", optional = true}
 loguru = "^0.7.0"
 elasticsearch = "8.8.2"
+zenpy = "2.0.36"
+html2text = "^2020.1.16"
 
 [tool.poetry.scripts]
 start = "server.main:start"
